--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "dylux-fg",
+  "name": "GURU-BOT",
   "description": "Customizable WhatsApp Bot",
-  "repository": "https://github.com/FG98F/dylux-fg",
-  "logo": "https://i.ibb.co/dG6rm49/fg-logo.png",
-  "keywords": ["bot", "whatsapp", "whatsapp-bot", "rpg", "dylux-bot-md", "dylux-bot"]
+  "repository": "https://github.com/Guru322/GURU-BOT",
+  "logo": "https://i.ibb.co/Guru322/fg-logo.png",
+  "keywords": ["bot", "whatsapp", "whatsapp-bot", "rpg", "GURU-bot-md", "GURU-bot"]
 }
