--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "whatsapp",
         "js-whatsapp",
         "whatsapp",
-        "dylux-bot",
+        "guru-bot",
         "GURU-bot-md",
         "multi-device",
         "MD",
