--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
   "name": "GURU-BOT",
   "description": "Customizable WhatsApp Bot",
   "repository": "https://github.com/Guru322/GURU-BOT",
-  "logo": "https://i.ibb.co/Guru322/fg-logo.png",
+  "logo": "https://i.imgur.com/gEj1qC6.jpeg",
   "keywords": ["bot", "whatsapp", "whatsapp-bot", "rpg", "GURU-bot-md", "GURU-bot"]
 }
