--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
         "@adiwajshing/baileys":  "^4.4.0",
         "@bochilteam/scraper": "^3.0.0",
         "awesome-phonenumber": "^3.4.0",
-        "axios": "^1.1.2",
+        "acrcloud": "^1.4.0",
+        "@shineiichijo/marika": "^2.0.6",
+        "axios": "^0.24.0",
         "cfonts": "^3.1.1",
         "chalk": "^5.1.0",
         "cheerio": "^1.0.0-rc.12",
@@ -52,6 +54,7 @@
         "fluent-ffmpeg": "^2.1.2",
         "formdata-node": "^5.0.0",
         "human-readable": "^0.2.1",
+        "instagram-url-direct": "^1.0.12",
         "jsdom": "^20.0.1",
         "link-preview-js": "^2.1.13",
         "lodash": "^4.17.21",
