--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "node-webpmux": "^3.1.3",
         "perf_hooks": "^0.0.1",
         "pino": "^8.6.1",
+        "pdfkit": "^0.13.0",
         "pino-pretty": "^9.1.1",
         "qrcode": "^1.5.1",
         "qrcode-terminal": "^0.12.0",
