--- a/package.json
+++ b/package.json
@@ -1,1 +1,95 @@
-{"name":"GURU","version":"0.0.2","description":"Customizable WhatsApp Bot","main":"index.js","type":"module","directories":{"lib":"lib","src":"src","plugins":"plugins"},"scripts":{"start":"node index.js","test":"node test.js","test2":"nodemon index.js"},"keywords":["termux-whatsapp-bot","whatsapp-bot","whatsapp","js-whatsapp","whatsapp","guru-bot","GURU-bot-md","multi-device","MD","baileys-md"],"homepage":"https://github.com/Guru322/GURU-BOT","author":{"name":"GURU"},"repository":{"type":"git","url":"git+https://github.com/Guru322/GURU-BOT.git"},"bugs":{"url":"https://github.com/Guru322/GURU-BOT/issues"},"license":"GPL-3.0-or-later","dependencies":{"@adiwajshing/baileys":"^4.4.0","@bochilteam/scraper":"^3.0.0","@shineiichijo/marika":"^2.0.6","@vitalets/google-translate-api":"^8.0.0","acrcloud":"^1.4.0","api-dylux":"^1.2.8","awesome-phonenumber":"^3.4.0","axios":"^0.24.0","cfonts":"^3.1.1","chalk":"^5.1.0","cheerio":"^1.0.0-rc.12","colors":"1.4.0","didyoumean":"^1.2.2","emoji-api":"^2.0.1","express":"^4.18.1","fg-ig":"^0.0.2","file-type":"^18.0.0","fluent-ffmpeg":"^2.1.2","formdata-node":"^5.0.0","g-i-s":"^2.1.6","hispamemes":"^1.0.7","human-readable":"^0.2.1","hxz-api":"^1.0.1","instagram-url-direct":"^1.0.12","jsdom":"^20.0.1","knights-canvas":"^1.3.7-a","link-preview-js":"^2.1.13","lodash":"^4.17.21","lowdb":"^3.0.0","mongoose":"^6.6.5","node-fetch":"^3.2.10","node-gtts":"^2.0.2","node-webpmux":"^3.1.3","pdfkit":"^0.13.0","perf_hooks":"^0.0.1","pino":"^8.6.1","pino-pretty":"^9.1.1","qrcode":"^1.5.1","qrcode-terminal":"^0.12.0","readline":"^1.3.0","similarity":"^1.2.1","socket.io":"^4.5.2","syntax-error":"^1.4.0","terminal-image":"^2.0.0","translate-google-api":"^1.0.4","url-regex-safe":"^3.0.0","xfarr-api":"^1.0.3","yargs":"^17.6.0","yt-search":"^2.10.3"},"optionalDependencies":{"moment-timezone":"^0.5.37","wa-sticker-formatter":"^4.3.2"}}
+{ 
+    "name": "GURU",
+    "version": "0.0.1",
+    "description": "Customizable WhatsApp Bot",
+    "main": "index.js",
+    "type": "module",
+    "directories": {
+        "lib": "lib",
+        "src": "src",
+        "plugins": "plugins"
+    },
+    "scripts": {
+        "start": "node index.js",
+        "test": "node test.js",
+        "test2": "nodemon index.js"
+    },
+    "keywords": [
+        "termux-whatsapp-bot",
+        "whatsapp-bot",
+        "whatsapp",
+        "js-whatsapp",
+        "whatsapp",
+        "guru-bot",
+        "GURU-bot-md",
+        "multi-device",
+        "MD",
+        "baileys-md"
+    ],
+    "homepage": "https://github.com/Guru322/GURU-BOT-V1",
+    "author": {
+        "name": "GURU"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Guru322/GURU-BOT-V1.git"
+    },
+    "bugs": {
+        "url": "https://github.com/Guru322/GURU-BOT-V1/issues"
+    },
+    "license": "GPL-3.0-or-later",
+    "dependencies": {
+        "@adiwajshing/baileys":  "^4.4.0",
+        "@bochilteam/scraper": "^3.0.0",
+        "awesome-phonenumber": "^3.4.0",
+        "acrcloud": "^1.4.0",
+        "@shineiichijo/marika": "^2.0.6",
+        "axios": "^0.24.0",
+        "cfonts": "^3.1.1",
+        "chalk": "^5.1.0",
+        "cheerio": "^1.0.0-rc.12",
+        "colors": "1.4.0",
+        "express": "^4.18.1",
+        "file-type": "^18.0.0",
+        "fluent-ffmpeg": "^2.1.2",
+        "formdata-node": "^5.0.0",
+        "human-readable": "^0.2.1",
+        "instagram-url-direct": "^1.0.12",
+        "jsdom": "^20.0.1",
+        "link-preview-js": "^2.1.13",
+        "lodash": "^4.17.21",
+        "lowdb": "^3.0.0",
+        "mongoose": "^6.6.5",
+        "node-fetch": "^3.2.10",
+        "node-gtts": "^2.0.2",
+        "node-webpmux": "^3.1.3",
+        "perf_hooks": "^0.0.1",
+        "pino": "^8.6.1",
+        "pdfkit": "^0.13.0",
+        "pino-pretty": "^9.1.1",
+        "qrcode": "^1.5.1",
+        "qrcode-terminal": "^0.12.0",
+        "readline": "^1.3.0",
+        "similarity": "^1.2.1",
+        "g-i-s": "^2.1.6",
+        "socket.io": "^4.5.2",
+        "syntax-error": "^1.4.0",
+        "terminal-image": "^2.0.0",
+        "url-regex-safe": "^3.0.0",
+        "emoji-api": "^2.0.1",
+        "translate-google-api": "^1.0.4",
+        "xfarr-api": "^1.0.3",
+        "hxz-api": "^1.0.1",
+        "yt-search": "^2.10.3", 
+        "hispamemes": "^1.0.7",
+        "didyoumean": "^1.2.2",
+        "fg-ig": "^0.0.2",
+        "api-dylux": "^1.2.8",
+        "@vitalets/google-translate-api": "^8.0.0",
+        "yargs": "^17.6.0" 
+    },
+    "optionalDependencies": {
+         "wa-sticker-formatter": "^4.3.2",
+        "moment-timezone": "^0.5.37"
+    }
+}
