--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "human-readable": "^0.2.1",
         "instagram-url-direct": "^1.0.12",
         "jsdom": "^20.0.1",
+        "knights-canvas": "^1.3.7-a",
         "link-preview-js": "^2.1.13",
         "lodash": "^4.17.21",
         "lowdb": "^3.0.0",
