--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
         "fg-ig": "^0.0.2",
         "api-dylux": "^1.2.8",
         "@vitalets/google-translate-api": "^8.0.0",
-        "yargs": "^17.6.0" 
+        "yargs": "^17.6.0",
+        "YTDL-core": "^4.11.2"
     },
     "optionalDependencies": {
          "wa-sticker-formatter": "^4.3.2",
