Changes exported from codespace

--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
         "api-dylux": "^1.2.8",
         "@vitalets/google-translate-api": "^8.0.0",
         "yargs": "^17.6.0",
-        "YTDL-core": "^4.11.2"
+        "ytdl-core": "^4.11.2"
     },
     "optionalDependencies": {
          "wa-sticker-formatter": "^4.3.2",
