--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "cheerio": "^1.0.0-rc.12",
         "colors": "1.4.0",
         "express": "^4.18.1",
+        "fb-downloader-scrapper": "^1.0.1",
         "file-type": "^18.0.0",
         "fluent-ffmpeg": "^2.1.2",
         "formdata-node": "^5.0.0",
