--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     },
     "license": "GPL-3.0-or-later",
     "dependencies": {
-        "@adiwajshing/baileys":  "github:Guru322/baileys",
+        "@adiwajshing/baileys":  "github:WhiskeySockets/Baileys",
         "@bochilteam/scraper": "^3.0.0",
         "awesome-phonenumber": "^3.4.0",
         "acrcloud": "^1.4.0",
