--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     },
     "license": "GPL-3.0-or-later",
     "dependencies": {
-        "@adiwajshing/baileys":  "github:WhiskeySockets/Baileys",
+        "@adiwajshing/baileys": "npm:@whiskeysockets/baileys@^6.0.1",
+        "@adiwajshing/keyed-db": "^0.2.4",
         "@bochilteam/scraper": "^3.0.0",
         "awesome-phonenumber": "^3.4.0",
         "acrcloud": "^1.4.0",
