--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "plugins": "plugins"
     },
     "scripts": {
-        "start": "node --max_old_space_size=8192 index.js",
+        "start": "node index.js",
         "test": "node test.js"
     },
     "keywords": [
