--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "formdata-node": "^5.0.0",
         "human-readable": "^0.2.1",
         "instagram-url-direct": "^1.0.12",
+        "jimp": "^0.22.8",
         "jsdom": "^20.0.1",
         "knights-canvas": "^1.3.7-a",
         "link-preview-js": "^3.0.0",
@@ -78,6 +79,7 @@
         "readline": "^1.3.0",
         "similarity": "^1.2.1",
         "g-i-s": "^2.1.6",
+        "sharp": "^0.32.3",
         "socket.io": "^4.5.2",
         "syntax-error": "^1.4.0",
         "terminal-image": "^2.0.0",
