--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
-version: "3.9"
+version: "3.9" 
 services:
-  worker:
+  web:
     build: .
+    ports:
+      - "8000:5000"
     volumes:
       - .:/code
       - logvolume01:/var/log
