--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatsapp-bot (GURU-BOT)",
+  "name": "whatsapp-bot (DENNIS-BOT)",
   "description": " Whatsapp bot.",
   "keywords": [
     "whatsapp bot"
