--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 { 
     "name": "GURU",
-    "version": "0.0.1",
-    "description": "Customizable WhatsApp Bot",
+    "version": "2.0.0",
+    "description": "Advanced WhatsApp Bot",
     "main": "index.js",
     "type": "module",
     "directories": {
@@ -38,7 +38,7 @@
     },
     "license": "GPL-3.0-or-later",
     "dependencies": {
-        "@adiwajshing/baileys": "npm:@whiskeysockets/baileys@^6.0.1",
+        "@whiskeysockets/baileys": "npm:@whiskeysockets/baileys",
         "@adiwajshing/keyed-db": "^0.2.4",
         "@bochilteam/scraper": "^4.2.3",
         "awesome-phonenumber": "^3.4.0",
@@ -47,6 +47,7 @@
         "aptoide-scraper": "^1.0.1",
         "axios": "^0.24.0",
         "cfonts": "^3.1.1",
+        "chess.js": "*",
         "chalk": "^5.1.0",
         "cheerio": "^1.0.0-rc.12",
         "colors": "1.4.0",
@@ -64,6 +65,7 @@
         "link-preview-js": "^3.0.0",
         "lodash": "^4.17.21",
         "lowdb": "^3.0.0",
+        "megajs": "^1.1.3",
         "moment-timezone": "^0.5.37",
         "mongoose": "^6.6.5",
         "node-fetch": "^3.2.10",
@@ -79,9 +81,11 @@
         "readline": "^1.3.0",
         "similarity": "^1.2.1",
         "g-i-s": "^2.1.6",
+         "sagiri": "*",
         "sharp": "^0.30.5",
         "socket.io": "^4.5.2",
         "syntax-error": "^1.4.0",
+        "spotifydl-core": "github:Guru322/Fix-spotifydl-core",
         "terminal-image": "^2.0.0",
         "url-regex-safe": "^3.0.0",
         "emoji-api": "^2.0.1",
