--- a/app.json
+++ b/app.json
@@ -22,9 +22,9 @@
       "required": true,
       "value": ""
     },
-    "REMOVE_BG_API_KEY": {
-      "description": "removebg api key",
-      "required": false,
+    "SESSION_ID": {
+      "description": "your session id",
+      "required": true,
       "value": ""
     }
     },
