--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-    "name": "GURU",
+    "name": "gurubot",
     "version": "2.0.0",
     "description": "Advanced WhatsApp Bot",
     "main": "index.js",
@@ -40,12 +40,12 @@
     "dependencies": {
         "@whiskeysockets/baileys": "npm:@whiskeysockets/baileys",
         "@adiwajshing/keyed-db": "^0.2.4",
-        "@bochilteam/scraper": "^4.2.3",
+        "@bochilteam/scraper": "^4.0.22-alpha.0",
         "awesome-phonenumber": "^3.4.0",
         "acrcloud": "^1.4.0",
         "@shineiichijo/marika": "^2.0.6",
         "aptoide-scraper": "^1.0.1",
-        "axios": "^0.24.0",
+        "axios": "^1.4.0",
         "canvacord": "^5.4.8",
         "cfonts": "^3.1.1",
         "chess.js": "*",
@@ -68,8 +68,8 @@
         "lowdb": "^3.0.0",
         "megajs": "^1.1.3",
         "moment-timezone": "^0.5.37",
-        "mongoose": "^6.6.5",
-        "node-fetch": "^3.2.10",
+        "mongoose": "^7.4.1",
+        "node-fetch": "^3.3.1",
         "node-gtts": "^2.0.2",
         "node-webpmux": "^3.1.3",
         "openai": "^3.2.1",
@@ -90,17 +90,16 @@
         "terminal-image": "^2.0.0",
         "url-regex-safe": "^3.0.0",
         "emoji-api": "^2.0.1",
-        "translate-google-api": "^1.0.4",
         "xfarr-api": "^1.0.3",
         "hxz-api": "^1.0.1",
         "yt-search": "^2.10.3", 
         "hispamemes": "^1.0.7",
         "didyoumean": "^1.2.2",
         "fg-ig": "^0.0.2",
-        "api-dylux": "^1.2.8",
-        "@vitalets/google-translate-api": "^8.0.0",
+        "api-dylux": "^1.6.9",
+        "@vitalets/google-translate-api": "^9.2.0",
         "yargs": "^17.6.0",
-        "ytdl-core": "git+ssh://git@github.com:khlevon/node-ytdl-core.git#v4.11.4-patch.2",
+        "ytdl-core": "npm:@distube/ytdl-core",
          "wa-sticker-formatter": "^4.3.2"
        
     }
