--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
       "value": ""
     },
     "SESSION_ID": {
-      "description": "your session id",
+      "description": "Guru_UnworthyExempt
+      ",
       "required": true,
       "value": ""
     },
