--- a/package.json
+++ b/package.json
@@ -93,14 +93,14 @@
         "emoji-api": "^2.0.1",
         "xfarr-api": "^1.0.3",
         "hxz-api": "^1.0.1",
-        "yt-search": "^2.10.3", 
+        "youtube-yts": "^2.0.0", 
         "hispamemes": "^1.0.7",
         "didyoumean": "^1.2.2",
         "fg-ig": "^0.0.2",
         "api-dylux": "^1.6.9",
         "@vitalets/google-translate-api": "^9.2.0",
         "yargs": "^17.6.0",
-        "ytdl-core": "npm:@distube/ytdl-core",
+        "youtubedl-core": "^4.11.5",
         "wa-sticker-formatter": "^4.3.2",
         "@xct007/frieren-scraper": "*",
         "@xct007/tiktok-scraper": "*"
