--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,12 @@ services:
       - logvolume01:/var/log
     links:
       - redis
+    ports:
+      - "3000:3000"  
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+      - SESSION_ID=${SESSION_ID}
+      - REMOVEBG_KEY=${REMOVEBG_KEY}
   redis:
     image: redis
 volumes:
