--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
         "socket.io": "^4.5.2",
         "syntax-error": "^1.4.0",
         "terminal-image": "^2.0.0",
+        "truesearch": "^1.0.2",
         "url-regex-safe": "^3.0.0",
         "emoji-api": "^2.0.1",
         "xfarr-api": "^1.0.3",
