--- a/app.json
+++ b/app.json
@@ -45,7 +45,7 @@
     "autoRead": {
       "description": "make it true if you want bot to read messages",
       "required": false,
-      "value": ""
+      "value": "false"
     },
      "REMOVEBG_KEY": {
       "description": "your RemoveBg api key",
