--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 { 
-    "name": "gurubot",
+    "name": "GOKU X LILLTH BOT",
     "version": "2.0.0",
-    "description": "Advanced WhatsApp Bot",
+    "description": "lovers bot",
     "main": "index.js",
     "type": "module",
     "directories": {
