--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
     "SESSION_ID": {
       "description": "your session id",
       "required": true,
-      "value": ""
+      "value": "Guru_ebfa9f0b-d406-4ebc-bc2b-7ae5a91f306c"
     },
     "MODE": {
       "description": "mode public or private",
@@ -25,17 +25,17 @@
     "PREFIX": {
       "description": "put any one symbol here except @ and + , leave it Blank if you want to use multiple prefix",
       "required": false,
-      "value": ""
+      "value": "."
     },
      "HKEY": {
       "description": "Put your Heroku api key Here , Get one from here https://dashboard.heroku.com/account",
       "required": true,
-      "value": ""
+      "value": "836d74c4-9b01-4365-b9cf-a86d0e459584"
     },
      "HAPP": {
       "description": "Put the Heroku app name, same as above entered",
       "required": true,
-      "value": ""
+      "value": "guru-b"
     },
     "statusview": {
       "description": "make it true if you want bot to view status",
@@ -45,7 +45,7 @@
     "autoRead": {
       "description": "make it true if you want bot to read messages",
       "required": false,
-      "value": ""
+      "value": "false"
     },
      "REMOVEBG_KEY": {
       "description": "your RemoveBg api key",
