--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
       "value": ""
     },
     "SESSION_ID": {
-      "description": "your session id",
+      "description": "Guru_d077837e-2634-4dca-9533-dfb236fd1598",
       "required": true,
       "value": ""
     },
