--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "whatsapp-bot (KÌÑG M-ÇRØSS)",
   "description": " Whatsapp bot.",
   "keywords": [
-    "KÌÑG M-ÇRØSS BOT"
+    "whatsapp bot"
   ],
   "repository": "https://github.com/M-cross1/GURU-BOT",
   "stack": "container",
