--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "whatsapp-bot (GURU-BOT)",
-  "description": " Whatsapp bot.",
+  "description": " Whatsapp bot made by mcross.",
   "keywords": [
     "whatsapp bot"
   ],
