--- a/app.json
+++ b/app.json
@@ -1,69 +1,36 @@
 {
   "name": "whatsapp-bot (GURU-BOT)",
-  "description": " Whatsapp bot made by mcross.",
+  "description": " Whatsapp bot.",
   "keywords": [
     "whatsapp bot"
   ],
   "repository": "https://github.com/Guru322/GURU-BOT",
   "stack": "container",
   "env": {
-    "DATABASE_URL": {
+    "OPENAI_API_KEY": {
+      "description": "openai apikey",
+      "required": false,
+      "value": ""
+    },
+    "OPENAI_ORGANIZATION": {
+      "description": "openai organisation id",
+      "required": false,
+      "value": ""
+    },
+    "MONGO_DB": {
       "description": "your mongodb database url",
-      "required": true,
-      "value": ""
-    },
-    "SESSION_ID": {
-      "description": "your session id",
-      "required": true,
-      "value": ""
-    },
-    "MODE": {
-      "description": "mode public or private",
-      "required": true,
-      "value": "private"
-    },
-    "PREFIX": {
-      "description": "put any one symbol here except @ and + , leave it Blank if you want to use multiple prefix",
       "required": false,
       "value": ""
     },
-     "HKEY": {
-      "description": "Put your Heroku api key Here , Get one from here https://dashboard.heroku.com/account",
-      "required": true,
-      "value": ""
-    },
-     "HAPP": {
-      "description": "Put the Heroku app name, same as above entered",
-      "required": true,
-      "value": ""
-    },
-    "statusview": {
-      "description": "make it true if you want bot to view status",
-      "required": true,
-      "value": ""
-    },
-    "autoRead": {
-      "description": "make it true if you want bot to read messages",
-      "required": false,
-      "value": "false"
-    },
-    "antidelete": {
-      "description": "bot will forward deleted messages if you make it true",
-      "required": false,
-      "value": "false"
-    
-     "REMOVEBG_KEY": {
-      "description": "your RemoveBg api key",
+    "REMOVE_BG_API_KEY": {
+      "description": "removebg api key",
       "required": false,
       "value": ""
     }
-    
+    },
     "buildpacks": [
     {
       "url": "heroku/nodejs"
-    },
-    {
-      "url": "https://github.com/DuckyTeam/heroku-buildpack-imagemagick.git"
     },
     {
       "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
@@ -73,4 +40,3 @@
     }
   ]
 }
-
