--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,4 @@
 # These owners will be the default owners for everything
 #in the repo.             
 
-               @Guru322
-               @IndraTensei
+               @Osmanosis
