--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 
-github: [GURU]
+github: [AMECA]
 patreon: # Replace 
 open_collective: # Replace with a single Open Collective username
 ko_fi: # Replace with a single Ko-fi username
