--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "@google/generative-ai": "0.1.3",
         "@shineiichijo/marika": "^2.0.6",
         "@vitalets/google-translate-api": "^9.2.0",
-        "@whiskeysockets/baileys": "github:WhiskeySockets/Baileys",
+        "@whiskeysockets/baileys": "git+ssh://git@github:WhiskeySockets/Baileys.git",
         "@xct007/frieren-scraper": "*",
         "@xct007/tiktok-scraper": "*",
         "acrcloud": "^1.4.0",
