--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatsapp-Automation (GURU-BOT)",
+  "name": "whatsapp-Automation",
   "description": " Whatsapp Ai.",
   "keywords": [
     "whatsapp Ai"
