Update Guru.js, app.json, and main-menu.js

--- a/app.json
+++ b/app.json
@@ -71,6 +71,12 @@
     {
       "url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"
     }
-  ]
+  ],
+  "formation": {
+    "worker": {
+      "quantity": 1,
+      "size": "basic"
+    }
+  }
 }
 
