--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
       "value": ""
     },
     "SESSION_ID": {
-      "description": "your session id",
+      "description": "GuruBot~4Xg0ek7M", 
       "required": true,
       "value": ""
     },
