--- a/.github/workflows/Aptible.yml
+++ b/.github/workflows/Aptible.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 
 
       - name: Deploy to Aptible
         uses: aptible/aptible-deploy-action@v4
