--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,12 +7,29 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Checkout source code
+      uses: actions/checkout@v4
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.REG_TOKEN }}
+
+    - name: Build and tag the Docker image
+      run: |
+        docker build . --file Dockerfile --tag ghcr.io/${{ github.repository_owner }}/DEPLOY-GURU:${{ github.sha }}
+
+    - name: Push the Docker image
+      run: |
+        docker push ghcr.io/${{ github.repository_owner }}/DEPLOY-GURU:${{ github.sha }}
+
+
