--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,8 +26,10 @@ jobs:
 
     - name: Build and tag the Docker image
       run: |
-        docker build . --file Dockerfile --tag ghcr.io/${{ github.repository_owner | toLower }}/deploy-guru:${{ github.sha }}
+        REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+        docker build . --file Dockerfile --tag ghcr.io/$REPO_OWNER/deploy-guru:${{ github.sha }}
 
     - name: Push the Docker image
       run: |
-        docker push ghcr.io/${{ github.repository_owner | toLower }}/deploy-guru:${{ github.sha }}
+        REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+        docker push ghcr.io/$REPO_OWNER/deploy-guru:${{ github.sha }}
