--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "license": "Apache License 2.0",
     "dependencies": {
         "@adiwajshing/keyed-db": "^0.2.4",
-        "@bochilteam/scraper": "^4.0.22-alpha.0",
+        "@bochilteam/scraper": "^5.0.1",
         "@google/generative-ai": "0.1.3",
         "@shineiichijo/marika": "^2.0.6",
         "@vitalets/google-translate-api": "^9.2.0",
@@ -50,7 +50,6 @@
         "@xct007/frieren-scraper": "*",
         "@xct007/tiktok-scraper": "*",
         "acrcloud": "^1.4.0",
-        "api-dylux": "^1.6.9",
         "aptoide-scraper": "^1.0.1",
         "awesome-phonenumber": "^3.4.0",
         "axios": "^1.4.0",
