--- a/app.json
+++ b/app.json
@@ -13,9 +13,9 @@
       "value": ""
     },
     "SESSION_ID": {
-      "description": "your session id",
+      "description": "GuruBot~ybhqG96P",
       "required": true,
-      "value": ""
+      "value": "GuruBot~ybhqG96P"
     },
     "MODE": {
       "description": "mode public or private",
