--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,5 @@
-# ____REMOVE THIS LINE AFTER RENAMING sample.env to .env ____
 DATABASE_URL=
-SESSION_ID=
+SESSION_ID=GuruBot~ybhqG96P
 REMOVEBG_KEY=
 PREFIX=
 MODE=
