--- a/sample.env
+++ b/sample.env
@@ -1,7 +1,7 @@
-DATABASE_URL=
-SESSION_ID=GuruBot~ybhqG96P
-REMOVEBG_KEY=
-PREFIX=
-MODE=
-autoRead=
-statusview=
+DATABASE_URL="mongodb+srv://mohsin:mohsin@cluster0.iauaztt.mongodb.net/?retryWrites=true&w=majority"
+SESSION_ID="GuruBot~ybhqG96P"
+REMOVEBG_KEY="yepeTQaFk7r9ymusihgXYvdN"
+PREFIX=","
+MODE="public"
+autoRead="true"
+statusview="false"
