--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "readline": "^1.3.0",
         "syntax-error": "^1.4.0",
         "url": "^0.11.0",
+        "wa-sticker-formatter": "^4.4.4",
         "yargs": "^17.6.0"
     },
     "overrides": {
