--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
         "express": "^4.18.1",
         "figlet": "^1.7.0",
         "file-type": "^18.0.0",
+        "form-data": "^4.0.2",
         "fs": "0.0.1-security",
+        "human-readable": "^0.2.1",
         "lodash": "^4.17.21",
         "moment-timezone": "^0.5.37",
         "mongodb": "^6.15.0",
@@ -60,14 +62,17 @@
         "node-cache": "^5.1.2",
         "node-fetch": "^3.3.1",
         "path": "^0.12.7",
+        "performance-now": "^2.1.0",
         "pino": "^8.6.1",
         "qrcode": "^1.5.1",
         "qrcode-terminal": "^0.12.0",
         "readline": "^1.3.0",
         "syntax-error": "^1.4.0",
         "url": "^0.11.0",
+        "url-regex-safe": "^4.0.0",
         "wa-sticker-formatter": "^4.4.4",
-        "yargs": "^17.6.0"
+        "yargs": "^17.6.0",
+        "yt-search": "^2.12.1"
     },
     "overrides": {
         "cache-manager": "5.2.2"
