--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
         "awesome-phonenumber": "^3.4.0",
         "axios": "^1.4.0",
         "baileys-pro": "^0.0.2",
+        "body-parser": "^2.2.0",
         "chalk": "^5.1.0",
         "cheerio": "^1.0.0-rc.12",
-        "dotenv": "^16.1.4",
+        "dotenv": "^16.5.0",
         "express": "^4.18.1",
         "figlet": "^1.7.0",
         "file-type": "^18.0.0",
