--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
         "test": "node test.js"
     },
     "keywords": [
-        "termux-whatsapp-bot",
-        "whatsapp-bot",
         "whatsapp",
         "js-whatsapp",
         "whatsapp",
@@ -25,16 +23,16 @@
         "MD",
         "baileys-md"
     ],
-    "homepage": "https://github.com/Guru322/GURU-BOT",
+    "homepage": "https://github.com/Guru322/GURU-Ai",
     "author": {
         "name": "GURU"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/Guru322/GURU-BOT.git"
+        "url": "git+https://github.com/Guru322/GURU-Ai.git"
     },
     "bugs": {
-        "url": "https://github.com/Guru322/GURU-BOT/issues"
+        "url": "https://github.com/Guru322/GURU-Ai/issues"
     },
     "license": "Apache License 2.0",
     "dependencies": {
